--- a/services/Catalog/Catalog.csproj
+++ b/services/Catalog/Catalog.csproj
@@ -7,7 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+		<PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL"
+			Version="9.4.0" />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8" />
 	</ItemGroup>
 
 	<ItemGroup>
