--- a/Basket/Basket.csproj
+++ b/Basket/Basket.csproj
@@ -10,7 +10,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="../../ServiceDefaults/ServiceDefaults.csproj" />
+		<ProjectReference Include="../ServiceDefaults/ServiceDefaults.csproj" />
 	</ItemGroup>
 
 </Project>
